force-app/main/default/objects/Custom_Task__c/Custom_Task__c.object-meta.xml
<CustomObject>
    <label>Custom Task</label>
    <nameField>
        <label>Custom Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>