force-app/main/default/objects/Custom_Task__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>