force-app/main/default/objects/Custom_Task__c/fields/Registered_Hours__c.field-meta.xml
<CustomField>
    <fullName>Registered_Hours__c</fullName>
    <label>Registered Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>