force-app/main/default/objects/Custom_Task__c/fields/Required_Hours__c.field-meta.xml
<CustomField>
    <fullName>Required_Hours__c</fullName>
    <label>Required Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>