force-app/main/default/objects/Custom_Task__c/fields/Resource_Project__c.field-meta.xml
<CustomField>
    <fullName>Resource_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource-Project</label>
    <referenceTo>Resource_Project__c</referenceTo>
    <relationshipLabel>Custom Tasks</relationshipLabel>
    <relationshipName>Custom_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>