force-app/main/default/objects/Custom_Task__c/validationRules/Assign_tasks_only_Project_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_tasks_only_Project_In_Progress</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISPICKVAL(Resource_Project__r.Project__r.Status__c,&apos;Pre-Kickoff&apos;),ISPICKVAL(Resource_Project__r.Project__r.Status__c,&apos;Completed&apos; ))</errorConditionFormula>
    <errorMessage>Only tasks are allowed to be assigned if the project status is &quot; In Progress &quot;.</errorMessage>
</ValidationRule>