force-app/main/default/objects/Custom_Task__c/validationRules/Only_Squad_Lead_Assing.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Squad_Lead_Assing</fullName>
    <active>true</active>
    <errorConditionFormula>OwnerId  &lt;&gt;  Resource_Project__r.Project__r.Squad_Lead__c</errorConditionFormula>
    <errorMessage>The logged-in user has not been designated as a squad lead.Only the Squad Lead can create and assign tasks.</errorMessage>
</ValidationRule>